# sdl_game

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
